crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@inference_failure.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = arrayOfZeros(50)\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/inference_failure.au
---
Error: Could not infer type
   ╭─[ main:2:10 ]
   │
 2 │     let a = arrayOfZeros(50)
   │             ────────┬───────  
   │                     ╰───────── Could not infer the type of this expression
   │ 
   │ Help: Try annotating the expression: `let val: ExpectedType = ...`
───╯
